data and logs/workflow_20260215_07h17.log
2026-02-15 07:17:18 - INFO - Orchestrator - Starting orchestrator
2026-02-15 07:17:18 - INFO - Orchestrator - Starting modules/1.file_retrieval.py
2026-02-15 07:17:18 - INFO - Orchestrator - Finished modules/1.file_retrieval.py
2026-02-15 07:17:18 - ERROR - Orchestrator - Module modules/1.file_retrieval.py failed with exit code 1
2026-02-15 07:17:18 - ERROR - Orchestrator - modules/1.file_retrieval.py errors before failure:
  File "/home/runner/work/NSW-Fuel-Price-Insights/NSW-Fuel-Price-Insights/modules/1.file_retrieval.py", line 125
    logger.info(f"{config["latest_file"]} file has not yet been transformed")
                           ^^^^^^^^^^^
SyntaxError: f-string: unmatched '['

